--- a/angular-frontend/src/app/projects-page/projects-page.component.html
+++ b/angular-frontend/src/app/projects-page/projects-page.component.html
@@ -1,7 +1,7 @@
 <div class="dashboard">
-  <div>
-    <h1>Projects</h1>
-  </div>
+  <header class="page-header">
+    <h1 class="page-title">Projects</h1>
+  </header>
 
   <nav class="tabs">
     <button
